[package]
name = "yamlate"
version = "0.1.0"
authors = ["Darin Minamoto <darinm223@gmail.com>"]
description = "A cross-language interpreter library that dynamically evaluates YAML attributes given variable bindings"
readme = "README.md"

keywords = ["yaml", "library", "interpreter"]

license = "MIT"

[dependencies]
yaml-rust = "*"
lazy_static = "*"
num = "*"
libc = "*"
clippy = { version = "*", optional = true }

[dependencies.sorty]
git = "https://github.com/Wafflespeanut/rust-sorty"

[features]
default = []

[lib]
crate-type = ["dylib"]

